# grok-cli

./: Cargo.toml  README.md
.test_data/: grok_test_1
.test_data/patterns/: pattern_test
src/: main.rs
