[package]
authors = ["dolly-parseton <dolly-parseton@gmail.com>"]
edition = "2018"
name = "grok-cli"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
afrs = "0.1.2"
glob = "0.3.0"
grok = "1.2.0"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
structopt = {version = "0.3", default-features = false}
